website structure ready

--- a/_layouts/math.html
+++ b/_layouts/math.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_CHTML"></script>
 <script type="text/x-mathjax-config">
@@ -16,14 +20,4 @@ autoNumber: "AMS"
 });
 </script>
 
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
-    {% include navigation.html %}
-    {{ content }}
-  </body>
-</html>
+{{ content }}
