--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -160,6 +160,8 @@ body {
 
 .ortalaAna {
   width: 1000px;
+  margin-top: auto;
+  margin-bottom: 25px;
   margin-left: auto;
   margin-right: auto;
 }
