--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,9 +5,9 @@
 
 $font1: PT Serif, serif;
 $font2: PT Mono;
-$title-font   : Lobster, cursive;
-$menu-font    : Alegreya Sans SC, sans-serif;
-$main-font    : Roboto Slab, serif;
+$title-font   : Lobster, cursive; // titre du site
+$menu-font    : Alegreya Sans SC, sans-serif; // boutons du menu
+$main-font    : Roboto, serif; // texte des articles
 
 // Colors
 $blue: #3498db;
