--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -80,7 +80,7 @@ $info		         : #308cbc;
 //fonts
 $font1               : Fira Sans,sans-serif;
 $font2               : Inconsolata;
-$alt-font            : serif;
+$alt-font            : Roboto, serif;
 $doc-font-size       : 16;
 $doc-line-height     : 26;
 
