test 2 phone font

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Bree+Serif");
 @import url("https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:900");
 
-$font1: PT Serif, serif;
+$font1: Roboto, serif;
 $font2: PT Mono;
 $title-font   : Lobster, cursive; // titre du site
 $menu-font    : Alegreya Sans SC, sans-serif; // boutons du menu
