change section title display

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -882,3 +882,13 @@ ul.menu {
 		margin-top: $top-margin-mobile;
 	}
 }
+
+.sectionCourses {
+  text-decoration: none;
+  color: $dark-blue;
+  list-style-type: none;
+}
+
+.nobull {
+  list-style-type: none;
+}
