remove eletric blue in links

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -889,6 +889,11 @@ ul.menu {
   list-style-type: none;
 }
 
+.cleanLinkSource {
+  color: $dark-blue;
+  list-style-type: none;
+}
+
 .nobull {
   list-style-type: none;
 }
